# agronexus

./: .env  .env.development  .env.example  .env.production  .gitignore  CART_SERVERLESS_IMPLEMENTATION_COMPLETE.md  CONNECTION_SETUP.md  DEPLOYMENT_CONFIGURATION.md  DEPLOYMENT_FIX.md  DEPLOYMENT_STATUS.md  FINAL_DEPLOYMENT_SUMMARY.md  GITHUB_DEPLOYMENT_INSTRUCTIONS.md  INTASEND_INTEGRATION.md  INTEGRATION_ISSUES_ANALYSIS.md  NEW_BACKEND_SETUP.md  PAYMENT_SETUP_OPTIONS.md  PURE_SERVERLESS_IMPLEMENTATION.md  PUSH_TO_GITHUB.md  REAL_DATA_INTEGRATION_GUIDE.md  REAL_PAYMENT_SETUP.md  RENDER_DEPLOYMENT_ISSUE.md  RENDER_MANUAL_DEPLOY_NEEDED.md  SERVERLESS_FIX_COMPLETE.md  TODO.md  UI_FIELD_NAMES.md  auth-fix-clean.sql  auth-fix-simple.sql  auth-minimal-fix.sql  auth-ultra-minimal.sql  deploy-payment-proxy.sh  fix-auth-database.sql  fix-auth-error.sql  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-django-dev.bat  start-agronexus.bat  start-agronexus.sh  (+11 more)
backend/: .env  .env.example  README.md  main.py  requirements.txt  setup_backend.ps1  setup_backend.sh
src/: App.tsx
src/components/: AuthModal.tsx
src/hooks/: useCart.tsx
src/pages/: Cart.tsx  Checkout-fixed.tsx  Dashboard.tsx  Marketplace.tsx
src/services/: api.ts  auth.ts  cart.ts  dashboard.ts  orders.ts  payments-fixed.ts  payments-simple.ts  products-real.ts  tasks.ts
supabase/functions/intasend-payment-proxy/: index.ts
